--- a/package.json
+++ b/package.json
@@ -29,22 +29,26 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "ng-apexcharts": "^1.7.6",
+    "ngx-toastr": "^19.0.0",
     "npm-check-updates": "^16.10.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.1",
+    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "css-loader": "^7.1.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "style-loader": "^4.0.0",
     "typescript": "~5.0.4"
   }
 }
