--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.1",
-    "@angular/cdk": "^16.0.1",
-    "@angular/common": "^16.0.1",
-    "@angular/compiler": "^16.0.1",
-    "@angular/core": "^16.0.1",
-    "@angular/forms": "^16.0.1",
-    "@angular/localize": "^16.0.3",
-    "@angular/material": "^16.0.1",
-    "@angular/platform-browser": "^16.0.1",
-    "@angular/platform-browser-dynamic": "^16.0.1",
-    "@angular/platform-server": "^16.0.1",
-    "@angular/router": "^16.0.1",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/localize": "^16.2.12",
+    "@angular/material": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/platform-server": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "14.1.1",
     "@popperjs/core": "^2.11.7",
@@ -29,16 +29,16 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "ng-apexcharts": "^1.7.6",
-    "ngx-toastr": "^19.0.0",
+    "ngx-toastr": "^17.0.0",
     "npm-check-updates": "^16.10.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.8",
-    "@angular/cli": "^16.2.16",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular-devkit/build-angular": "^16.2.16",
+    "@angular/cli": "16.2.16",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.3.0",
     "css-loader": "^7.1.2",
     "jasmine-core": "~4.6.0",
