--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/assets/scss/style.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
