--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.dev.ts"
+                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "buildOptimizer": false,
